--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -2,3 +2,13 @@
 Posté le <time class="post-date dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">{{ .Date.Day }} {{ index $.Site.Data.mois (printf "%d" .Date.Month) }} {{ .Date.Year }}</time>
 </span>
 
+
+
+
+
+<!-- test 
+<p>
+{{ .Date.Format "Monday"}} 
+{{ index $.Site.Data.jour (printf "%d" .Date.Day) }}
+{{ index $.Site.Data.mois (printf "%d" .Date.Month) }} </p>
+-->
