--- a/layouts/partials/page-edit.html
+++ b/layouts/partials/page-edit.html
@@ -1,3 +1,10 @@
-<a href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}" class="
-f6 ph3 pv1 br2 dib  tc ttu mv3 bg-primary-color white hover-bg-green link
-">Améliorez cette page</a>
+
+<div class="btn btn-primary btn-lg btn-block">
+Page mise à jour le 
+<time class="dt-updated" datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">
+{{ .Lastmod.Day }} {{ index $.Site.Data.mois (printf "%d" .Lastmod.Month) }} {{ .Lastmod.Year }}
+</time> 
+<a class="btn btn-primary btn-success white hover-bg-green link" role="button" 
+href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}">
+Améliorez cette page</a>
+</div>
