--- a/layouts/partials/hcard.html
+++ b/layouts/partials/hcard.html
@@ -1,4 +1,3 @@
-<div class="h-card">
-<img class="u-photo" src="{{ .Site.Author.authorphoto }}" />
-<h1><a href="{{ .Site.Author.authorurl }}" >{{ .Site.Author.name }}</a><h1>
-</div>
+<span class="h-card">
+<img class="u-photo" src="{{ .Site.Author.authorphoto }}" /> <a rel="me" href="{{ .Site.Author.site }}" >{{ .Site.Author.name }}</a>
+</span>
