Chantier à reprendre. WIP

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <article class="h-entry" role="main" class="blog-post">
+      <article class="h-entry post" role="main" class="blog-post">
        <div class="e-content p-name">{{ .Content }}</div>
       </article>
 <!-- webmention a mettre en forme -->      
