ajout auteur dans page-edit

--- a/layouts/partials/auteur.html
+++ b/layouts/partials/auteur.html
@@ -1,1 +1,1 @@
-<a rel="author" class="p-author h-card" href="{{ .Site.Author.authorurl }}">{{ .Site.Author.name }}</a>
+<a rel="author" class="p-author h-card" href="{{ .Site.Author.site }}">{{ .Site.Author.name }}</a>
