--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -25,7 +25,7 @@
         {{ end }}
         <div class="posts-list">
           {{ range .Paginator.Pages }}
-            <article class="post-preview h-entry">
+            <article class="post-preview">
               <a class="u-url" href="{{ .Permalink }}">
                 <h2 class="post-title p-name">{{ .Title }}</h2>
     
