--- a/themes/beautifulhugo/layouts/_default/baseof.html
+++ b/themes/beautifulhugo/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ .Lang }}">
   {{ partial "head.html" . }}
-  <body class="h-entry">
+  <body>
     {{ partial "nav.html" . }}
     {{ block "header" . }}{{ partial "header.html" . }}{{ end }}
     {{ block "main" . }}{{ end }}
