ajout script webmention

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,8 +9,8 @@
         {{ partial "page-edit.html" . }}
         <!-- /bloc edit --> 
         
-        <!-- partial webmention.html a inserer --> 
-
+        <!-- partial webmention a inserer --> 
+        {{ partial "webmention.html" . }}
        
 
         
