--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -38,7 +38,9 @@
     
               <p class="post-meta">
               Posté le <a class="u-url" href="{{ .Permalink }}">
-              <time class="post-date dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">{{ .Date.Day }} {{ index $.Site.Data.mois (printf "%d" .Date.Month) }} {{ .Date.Year }}</time>
+              <time class="post-date dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">
+              {{ .Date.Format "2" }}{{ if in (slice 1) .Date.Day}}er{{ end }} 
+               {{ index $.Site.Data.mois (printf "%d" .Date.Month) }} {{ .Date.Year }}</time>
               </a> 
               (<a rel="author" class="p-author h-card" href="{{ .Site.Author.site }}">{{ .Site.Author.name }}</a>)
               </p>
