hcard display: inline-block;

--- a/layouts/partials/hcard.html
+++ b/layouts/partials/hcard.html
@@ -1,3 +1,4 @@
 <span class="h-card">
-<img class="u-photo" src="{{ .Site.Author.authorphoto }}" /> <a rel="me" href="{{ .Site.Author.site }}" >{{ .Site.Author.name }}</a>
+<img class="u-photo" src="{{ .Site.Author.authorphoto }}" />
+    <a rel="me" href="{{ .Site.Author.site }}" >{{ .Site.Author.name }}</a>
 </span>
