--- a/static/css/main.css
+++ b/static/css/main.css
@@ -708,7 +708,9 @@ input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus, .gs
   line-height: normal;
 }
 
+/* photo h-card alignement  */ 
 .u-photo {
+  display: inline-block;
   width: 20px;
 }
 
