--- a/layouts/partials/page-edit.html
+++ b/layouts/partials/page-edit.html
@@ -1,12 +1,11 @@
+<h6 class="f4 dark-gray mb2">
+    <a class="post-title p-name u-url" href="{{ .Permalink }}" class="hide-child link primary-color">
+        <span class="nl3 child">{{ partial "svg/link-permalink.svg" (dict "size" "14px") }}</span>
+        {{ .Title }}
+    </a>
+    a été mise à jour le  <time class="dt-updated" datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">{{ .Lastmod.Format "02-01-2006"}}</time> {{ with .GitInfo }}: <a class="hide-child link primary-color" href="{{$.Site.Params.ghrepo}}/commit/{{ .Hash }}">{{ .Subject }} ({{ .AbbreviatedHash }})</a>{{end }} par <a rel="author" class="p-author h-card" href="{{ .Site.Author.site }}">{{ .Site.Author.name }}</a>
+</h6>
 
-<div class="btn footer btn-primary btn-lg"> 
-<a class="post-title p-name u-url" href="{{ .Permalink }}">"{{ .Title }}"</a>
-<time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}"></time>
-<time class="dt-updated" datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">
-<br>a été mise à jour le {{ .Lastmod.Format "02-01-2006"}}</time>
-<br>par <a rel="author" class="p-author h-card" href="{{ .Site.Author.site }}">{{ .Site.Author.name }}</a>
-<br>
-<a class="btn btn-primary btn-success white hover-bg-green link" role="button" 
-href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}">
-Améliorez cette page</a><br>
-</div>
+<a class="btn btn-primary btn-success white hover-bg-green link" role="button"
+   href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}">
+    Améliorez cette page</a>
