--- a/layouts/partials/webmention.html
+++ b/layouts/partials/webmention.html
@@ -1,3 +1,13 @@
+<!-- Webmention -->
+<p>Vous avez écrit une réponse à ce post ? Faites-moi connaître l'URL : </p>
+<form action="https://webmention.herokuapp.com/api/webmention" method="post">
+    <input name="source" type="url" placeholder="http://exemple.com/mon-post-cool">
+    <input name="target" value="http://christopheducamp.com/2017/07/25/100-days-of-code/" type="hidden">
+    <input value="Envoyer la Webmention" type="submit">
+</form>
+
+<section class="webmention">
+
 <script id="webmention-hosted">
 (function () {
 var sn = document.createElement("script"), s = document.getElementsByTagName("script")[0], url;
@@ -8,3 +18,6 @@ sn.src = "//webmention.herokuapp.com/api/embed?url=" + encodeURIComponent(url ||
 s.parentNode.insertBefore(sn, s);
 }());
 </script>
+
+</section>
+<!-- / Webmention -->
