--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -1,3 +1,16 @@
+<!-- webmention.io -->
+
+<link rel="pingback" href="https://webmention.io/100daysofcode.christopheducamp.com/xmlrpc" />
+<link rel="webmention" href="https://webmention.io/100daysofcode.christopheducamp.com/webmention" />
+
+<!-- /webmention.io -->
+<!-- webmention.heroku.app -->
+
+<!--<link rel="authorization_endpoint" href="https://indieauth.com/auth">-->
+<!--<link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />-->
+
+<!-- /webmention.heroku.app -->
+
 
 <!--
 If you want to include any custom html just before </head>, put it in /layouts/head_custom.html
