--- a/layouts/partials/webmention.html
+++ b/layouts/partials/webmention.html
@@ -1,14 +1,14 @@
+<hr>
 <!-- Webmention -->
-<p>Vous avez écrit une réponse à ce post ? Faites-moi connaître l'URL : </p>
-<form action="https://webmention.herokuapp.com/api/webmention" method="post">
-    <input name="source" type="url" placeholder="http://exemple.com/mon-post-cool">
-    <input name="target" value="http://christopheducamp.com/2017/07/25/100-days-of-code/" type="hidden">
-    <input value="Envoyer la Webmention" type="submit">
-</form>
+<section class="envoi-webmention">
+    <h4>Vous avez écrit une réponse à ce post ? Faites-moi connaître l'URL :</h4>
 
-<section class="webmention">
-
-<script id="webmention-hosted">
+        <form action="https://webmention.herokuapp.com/api/webmention" method="post">
+            <input name="source" type="url" placeholder="http://exemple.com/mon-post-cool">
+            <input name="target" value="http://christopheducamp.com/2017/07/25/100-days-of-code/" type="hidden">
+            <input class="btn btn-primary" role="button" value="Envoyez la Webmention" type="submit">
+        </form>
+    <script id="webmention-hosted">
 (function () {
 var sn = document.createElement("script"), s = document.getElementsByTagName("script")[0], url;
 url = document.querySelectorAll ? document.querySelectorAll("link[rel~=canonical]") : false;
