--- a/layouts/partials/page-edit.html
+++ b/layouts/partials/page-edit.html
@@ -1,11 +1,1 @@
-<h6 class="f4 dark-gray mb2">
-    <a class="post-title p-name u-url" href="{{ .Permalink }}" class="hide-child link primary-color">
-        <span class="nl3 child">{{ partial "svg/link-permalink.svg" (dict "size" "14px") }}</span>
-        {{ .Title }}
-    </a>
-    a été mise à jour le  <time class="dt-updated" datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">{{ .Lastmod.Format "02-01-2006"}}</time> {{ with .GitInfo }}: <a class="hide-child link primary-color" href="{{$.Site.Params.ghrepo}}/commit/{{ .Hash }}">{{ .Subject }} ({{ .AbbreviatedHash }})</a>{{end }} par <a rel="author" class="p-author h-card" href="{{ .Site.Author.site }}">{{ .Site.Author.name }}</a>
-</h6>
-
-<a class="btn btn-primary btn-success white hover-bg-green link" role="button"
-   href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}">
-    Améliorez cette page</a>
+<a href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}" role="button" class="btn btn-primary">Améliorez cette page</a>
