--- a/layouts/partials/page-edit.html
+++ b/layouts/partials/page-edit.html
@@ -1,1 +1,5 @@
-<a href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}" role="button" class="btn btn-primary">Améliorez cette page</a>
+<a href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}" role="button" class="btn btn-primary">
+    <span class="fa-stack">
+        <i class="fa fa-github"></i>
+    </span>Améliorer cette page
+</a>
