--- a/layouts/partials/webmention.html
+++ b/layouts/partials/webmention.html
@@ -1,12 +1,11 @@
-<hr>
-<!-- Webmention -->
-<section class="envoi-webmention">
-    <h4>Vous avez écrit une réponse à ce post ? Faites-moi connaître l'URL :</h4>
+
+    <h5>Vous avez écrit une réponse à ce post ?</h5>
+        <h6>Faites-moi connaître l'URL :</h6>
 
         <form action="https://webmention.herokuapp.com/api/webmention" method="post">
             <input name="source" type="url" placeholder="http://exemple.com/mon-post-cool">
             <input name="target" value="http://christopheducamp.com/2017/07/25/100-days-of-code/" type="hidden">
-            <input class="btn btn-primary" role="button" value="Envoyez la Webmention" type="submit">
+            <input class="btn btn-primary" role="button" value="Envoyer l'URL" type="submit">
         </form>
     <script id="webmention-hosted">
 (function () {
@@ -18,6 +17,3 @@ sn.src = "//webmention.herokuapp.com/api/embed?url=" + encodeURIComponent(url ||
 s.parentNode.insertBefore(sn, s);
 }());
 </script>
-
-</section>
-<!-- / Webmention -->
