--- a/static/css/main.css
+++ b/static/css/main.css
@@ -824,37 +824,43 @@ img.webmention-error {display: none;}
 }
 
 
-/* formulaire envoi url webmention */
+/* formulaire envoi url + webmention */
 
-.envoi-webmention {
-    font-size: 1.3rem;
-    margin-top: 2rem;
-    padding: 1rem;
+.mention-edit {
+    /* layout */
+    padding: 1rem 0;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.envoi-webmention, .edit {
+    /* layout */
+    border: 1px solid lightsteelblue;
+    padding: .5rem 0 2rem 0;
+    font-size: 1.35rem;
     background-color: #f5f5f5;
-    border: 1px solid darkgray;
-    border-radius: 3px;
-  }
-
-input {
-    margin: 0 1rem;
-    width: 18vw;
+    /* flexbox */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
 }
-
-.dark-gray {
-  color: #333;
-}
-
-/* metadata et page-edit */
 
 .edit {
-    width: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    margin-top: 1rem;
-    padding: .5rem;
-    background-color: #f5f5f5;
-
+    margin-top: 2rem;
 }
+
+input {
+    display:block;
+    margin: 0.5rem auto;
+    width: 25rem;
+}
+
+.btn:hover {
+    background-color: #008800;
+}
+
+
+
