--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,10 +18,10 @@
     {{ if $bigimg }}
       <div class="intro-header big-img">
         {{ $subtitle := $.Scratch.Get "subtitle" }}
-        <div class="container">
+        <div class="container h-entry">
           <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-              <div class="{{ .Type }}-heading h-entry">
+              <div class="{{ .Type }}-heading e-content">
                 <h1>{{ with $.Scratch.Get "title" }}{{.}}{{ else }}<br/>{{ end }}</h1>
                   {{ if $subtitle }}
                     {{ if eq .Type "page" }}
