--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,9 +2,9 @@
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-       <div role="main" class="blog-post">
+       <article role="main" class="blog-post">
         {{ .Content }}
-       </div>
+       </article>
 
         <div class="mention-edit">
             <div class="envoi-webmention">
