--- a/layouts/partials/webmention.html
+++ b/layouts/partials/webmention.html
@@ -1,4 +1,6 @@
 
+<div class="envoi-webmention">
+
     <h5>Vous avez écrit une réponse à ce post ?</h5>
         <h6>Faites-moi connaître l'URL :</h6>
 
@@ -7,7 +9,10 @@
             <input name="target" value="http://christopheducamp.com/2017/07/25/100-days-of-code/" type="hidden">
             <input class="btn btn-primary" role="button" value="Envoyer l'URL" type="submit">
         </form>
-    <script id="webmention-hosted">
+</div>
+
+<script id="webmention-hosted">
+
 (function () {
 var sn = document.createElement("script"), s = document.getElementsByTagName("script")[0], url;
 url = document.querySelectorAll ? document.querySelectorAll("link[rel~=canonical]") : false;
