--- a/layouts/partials/page-edit.html
+++ b/layouts/partials/page-edit.html
@@ -1,5 +1,7 @@
+<div class="edit">
 <a href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}" role="button" class="btn btn-primary">
     <span class="fa-stack">
         <i class="fa fa-github"></i>
     </span>Améliorer cette page
 </a>
+</div>
