--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,8 +17,10 @@
            {{ partial "page-meta-data.html" . }}
            <!-- /partiel meta data-->
            <!-- partiel bouton page-edit-->
+            <div class="edit">
            {{ partial "page-edit.html" . }}
            <!-- /partiel bouton page-edit-->
+            </div>
         </div>
 
 
