--- a/layouts/partials/webmention.html
+++ b/layouts/partials/webmention.html
@@ -11,6 +11,8 @@
         </form>
 </div>
 
+<div class="webmention-mention webmention-author webmention-name webmention-footer webmention-summary webmention-published webmention-interaction-presentation webmention-face-pile webmention-interaction-like webmention-interaction-presentation:after webmention-interaction-repost">
+
 <script id="webmention-hosted">
 
 (function () {
@@ -22,3 +24,5 @@ sn.src = "//webmention.herokuapp.com/api/embed?url=" + encodeURIComponent(url ||
 s.parentNode.insertBefore(sn, s);
 }());
 </script>
+
+</div>
