--- a/static/css/main.css
+++ b/static/css/main.css
@@ -762,8 +762,8 @@ input {
     max-width: 600px;
     margin:10px auto;
     color:#212121;
-    font-size: 0.7rem;
-
+    font-size: 1rem;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -779,7 +779,7 @@ input {
     align-items: center;
 }
 
-img {
+.webmention-author img {
     display: block;
     height: 60px;
     border-radius: 35px;
