--- a/static/css/main.css
+++ b/static/css/main.css
@@ -759,11 +759,12 @@ input {
 /* ajout webmention-hosted css herosku  */
 
 .webmention-container {
-    max-width: 600px;
-    margin:10px auto;
-    color:#212121;
-    font-size: 1rem;
+    border: 1px solid lightsteelblue;
+    padding: .5rem 0 2rem 0;
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 1.25rem;
+    background-color: #f5f5f5;
+    color:#212121;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
