--- a/static/css/main.css
+++ b/static/css/main.css
@@ -760,7 +760,7 @@ input {
 
 .webmention-container {
     border: 1px solid lightsteelblue;
-    padding: .5rem 0 2rem 0;
+    padding: 2rem 0;
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 1.25rem;
     background-color: #f5f5f5;
